cncProd/force-app/main/default/objects/Service_Package_Item__c/fields/C_Date__c.field-meta.xml
<CustomField>
    <fullName>C_Date__c</fullName>
    <formula>DATEVALUE(CreatedDate)</formula>
    <label>C Date</label>
    <type>Date</type>
</CustomField>