cncProd/force-app/main/default/objects/Service_Package_Item__c/fields/DWH_Item_Id__c.field-meta.xml
<CustomField>
    <fullName>DWH_Item_Id__c</fullName>
    <externalId>true</externalId>
    <label>DWH Item Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>