cncProd/force-app/main/default/objects/Service_Package_Item__c/fields/Item_Balance__c.field-meta.xml
<CustomField>
    <fullName>Item_Balance__c</fullName>
    <label>Item Balance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>