cncProd/force-app/main/default/objects/Service_Package_Item__c/fields/Service_Package__c.field-meta.xml
<CustomField>
    <fullName>Service_Package__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Service Package</label>
    <referenceTo>Service_Packages__c</referenceTo>
    <relationshipLabel>Service Package Items</relationshipLabel>
    <relationshipName>Service_Package_Items</relationshipName>
    <type>Lookup</type>
</CustomField>