cncProd/force-app/main/default/objects/Service_Package_Item__c/fields/VehicleId_Historical__c.field-meta.xml
<CustomField>
    <fullName>VehicleId_Historical__c</fullName>
    <description>Id of the Registered Vehicle for Historical Tracking Purposes (due to Autoline Split)</description>
    <label>Vehicle Id (Historical)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>