cncProd/force-app/main/default/objects/Service_Package_Item__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Item_Balance__c</columns>
    <columns>Service_Code__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Service_Package__c</field>
        <operation>equals</operation>
        <value>CARPKGPLUS</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>9/4/2019 12:00 AM</value>
    </filters>
    <label>All</label>
</ListView>